@@ -130,3 +130,5 @@ Fixed a double free in recovering from a previous error in default intent handle
 Fixed some indexing out of bounds in floating point interpolation
 Fixed a bug in PCS/Colorspace order when reading V2 Lab devicelinks
 Added a way to retrieve matrix shaper always, no matter LUT is present
+Changed endianess detection for PowerPC
+Fixed memory leaks on error handling
